Fix alignment issues

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -622,14 +622,17 @@
       }
     }
   }
+
+  h3 {
+    margin-top: 0;
+  }
   .left {
     font-size: 18px;
     padding-left: 0;
     padding-right: 0;
     @include breakpoint ($tablet) {
       margin-bottom: 0;
-      padding-top: 20px;
-      padding-bottom: 20px;
+      padding: 20px 15px;
       font-size: 21px;
     }
   }
@@ -639,8 +642,7 @@
     padding-right: 0;
     @include breakpoint ($tablet) {
       margin-bottom: 0;
-      padding-top: 20px;
-      padding-bottom: 20px;
+      padding: 20px 15px;
       font-size: 21px;
     }
   }
